objects/Product_Lookup_Management__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Enable &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Disable &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Hide &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Default Filter</fullName>
                </value>
                <value>
                    <fullName>Optional Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SmartBytes Bundle</fullName>
                </value>
                <value>
                    <fullName>Atomic Bundle</fullName>
                </value>
                <value>
                    <fullName>HiTech Simple Bundle</fullName>
                </value>
                <value>
                    <fullName>HiTech Rack Space Bundle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Lookup Management</relationshipLabel>
        <relationshipName>Product_Lookup_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Lookup Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Category__c</columns>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Platform_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Action_Type__c</columns>
        <columns>Message__c</columns>
        <columns>Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Lookup Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>